[package]
name = "rustpad"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
serial_test = "3"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
